Fixed overflow issue to make website appear more responsive and aligned items column-wise in center through media queries.

--- a/Using Basic Technologies/assets/css/style.css
+++ b/Using Basic Technologies/assets/css/style.css
@@ -13,6 +13,7 @@
 /* Extra Important CSS Code */
 body{
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 main h1{
@@ -247,3 +248,13 @@ header a>button:hover{
 
 
 /* Footer */
+
+
+
+
+
+/* Extra Important CSS Code */
+body{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
